--- a/src/canvas.css
+++ b/src/canvas.css
@@ -1,7 +1,7 @@
-canvas{
-    border:2px solid black;
-    position: fixed;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-}
+/*canvas{*/
+/*    border:2px solid black;*/
+/*    position: fixed;*/
+/*    top:50%;*/
+/*    left:50%;*/
+/*    transform: translate(-50%,-50%);*/
+/*}*/
