--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ canvas{
     left:50%;
     transform: translate(-50%,-50%);
 }
-button{
+.reset{
     position:fixed;
     top:5%;
     right: 5%;
@@ -14,4 +14,102 @@ button{
     border:none;
     font-weight: bold;
     color:white;
+}
+.infoBtn{
+    color:black;
+    position:fixed;
+    bottom:5%;
+    right:5%;
+    font-size:36px;
+    background: none;
+    border:none;
+    cursor:pointer;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal .content {
+    position: relative;
+    padding: 50px;
+    width: 40%;
+    height: 70%;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: rgba(112, 128, 175, 0.2) 0px 16px 24px 0px;
+    transform: scale(0);
+    text-align:center;
+    transition: transform 300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
+    font-family: 'Montserrat', sans-serif;
+
+
+
+}
+.modal .content h1{
+    text-transform: uppercase;
+    font-size: 40px;
+}
+.modal .content p{
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.modal .close{
+    position:absolute;
+    top:20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    background: black;
+    cursor:pointer;
+}
+kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+    color: #333;
+    display: inline-block;
+    font-size: .85em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
+    text-transform: none;
+}
+
+.modal .close::after,.close::before{
+    content:" ";
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    width: 25px;
+    height: 3px;
+    background: white;
+}
+.modal .close::before{
+    transform: translate(-50%,-50%) rotate(-45deg);
+
+}
+.modal .close::after{
+    transform: translate(-50%,-50%) rotate(45deg);
+
+}
+.modal.open {
+    opacity: 1;
+    visibility: visible;
+}
+.modal.open .content {
+    transform: scale(1);
 }
