--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ canvas{
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+    z-index: -1;
 }
 .reset{
     position:fixed;
@@ -14,6 +15,7 @@ canvas{
     border:none;
     font-weight: bold;
     color:white;
+    cursor:pointer;
 }
 .infoBtn{
     color:black;
@@ -50,9 +52,6 @@ canvas{
     text-align:center;
     transition: transform 300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
     font-family: 'Montserrat', sans-serif;
-
-
-
 }
 .modal .content h1{
     text-transform: uppercase;
@@ -64,7 +63,7 @@ canvas{
     font-weight: normal;
 }
 
-.modal .close{
+.modal .content .close{
     position:absolute;
     top:20px;
     right: 20px;
@@ -73,20 +72,7 @@ canvas{
     background: black;
     cursor:pointer;
 }
-kbd {
-    background-color: #eee;
-    border-radius: 3px;
-    border: 1px solid #b4b4b4;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
-    color: #333;
-    display: inline-block;
-    font-size: .85em;
-    font-weight: 700;
-    line-height: 1;
-    padding: 2px 4px;
-    white-space: nowrap;
-    text-transform: none;
-}
+
 
 .modal .close::after,.close::before{
     content:" ";
@@ -112,4 +98,19 @@ kbd {
 }
 .modal.open .content {
     transform: scale(1);
+}
+
+kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+    color: #333;
+    display: inline-block;
+    font-size: .85em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
+    text-transform: none;
 }
