--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('~@fortawesome/fontawesome-free/css/fontawesome.min.css');
+
 canvas{
     border:2px solid black;
     position: fixed;
@@ -27,7 +29,7 @@ canvas{
     border:none;
     cursor:pointer;
 }
-.modal {
+.modal,.settings__modal{
     position: fixed;
     top: 0;
     left: 0;
@@ -40,7 +42,7 @@ canvas{
     visibility: hidden;
 }
 
-.modal .content {
+.modal .content,.settings__modal .content {
     position: relative;
     padding: 50px;
     width: 40%;
@@ -53,17 +55,17 @@ canvas{
     transition: transform 300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
     font-family: 'Montserrat', sans-serif;
 }
-.modal .content h1{
+.modal .content h1,.settings__modal .content h1{
     text-transform: uppercase;
     font-size: 40px;
 }
-.modal .content p{
+.modal .content p,.settings__modal .content p{
     text-transform: uppercase;
     font-size: 24px;
     font-weight: normal;
 }
 
-.modal .content .close{
+.modal .content .close,.settings__modal .content .close{
     position:absolute;
     top:20px;
     right: 20px;
@@ -74,7 +76,7 @@ canvas{
 }
 
 
-.modal .close::after,.close::before{
+.modal .close::after,.close::before,.settings__modal .close::after,.close::before{
     content:" ";
     position:absolute;
     top:50%;
@@ -84,21 +86,22 @@ canvas{
     height: 3px;
     background: white;
 }
-.modal .close::before{
+.modal .close::before,.settings__modal .close::before{
     transform: translate(-50%,-50%) rotate(-45deg);
 
 }
-.modal .close::after{
+.modal .close::after,.settings__modal .close::after{
     transform: translate(-50%,-50%) rotate(45deg);
 
 }
-.modal.open {
+.modal.open,.settings__modal.open {
     opacity: 1;
     visibility: visible;
 }
-.modal.open .content {
+.modal.open .content,.settings__modal.open .content {
     transform: scale(1);
 }
+
 
 kbd {
     background-color: #eee;
@@ -113,4 +116,15 @@ kbd {
     padding: 2px 4px;
     white-space: nowrap;
     text-transform: none;
+}
+.settingsBtn{
+    position: fixed;
+    bottom:5%;
+    left:5%;
+    background: none;
+    cursor:pointer;
+    padding: 10px;
+    font-size:36px;
+    border:none;
+
 }
