--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ canvas{
     height: 70%;
     border-radius: 8px;
     background-color: #fff;
-    box-shadow: rgba(112, 128, 175, 0.2) 0px 16px 24px 0px;
+    box-shadow: rgba(112, 128, 175, 0.2) 0 16px 24px 0;
     transform: scale(0);
     text-align:center;
     transition: transform 300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
@@ -124,5 +124,21 @@ kbd {
     padding: 10px;
     font-size:36px;
     border:none;
+}
+.settings__wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.settings__item{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
+.settings__modal .content label{
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
 }
